# cfml

./: .gitlab-ci.yml  README.md  ast_interpreter.c  ast_interpreter.h  example_main.c  main.c  meson.build
benchmarks/FMLBench/: report.Rmd  report.html  timing_log.csv
benchmarks/FMLBench/heap_log/: heap:.\ast:brainfuck.csv  heap:.\ast:langtons_ant.csv  heap:.\ast:nested_loops.csv  heap:.\ast:sudoku.csv  heap:.\bc:brainfuck.csv  heap:.\bc:langtons_ant.csv  heap:.\bc:nested_loops.csv  heap:.\bc:sudoku.csv  heap:.\vlasami-cfml:brainfuck.csv  heap:.\vlasami-cfml:langtons_ant.csv  heap:.\vlasami-cfml:nested_loops.csv  heap:.\vlasami-cfml:sudoku.csv
examples/: fibo.fml  roman.fml  stack.fml  triangle.fml
src/: cmd_config.h  main.c  types.h  utils.c  utils.h
src/ast/: ast_interpreter.c  ast_interpreter.h
src/bc/: bc_interpreter.c  bc_interpreter.h  bc_shared_globals.c  bc_shared_globals.h  serialization.c  serialization.h
src/bc/compile/: bc_compiler.c  bc_compiler.h
src/bc/interpret/: bc_interpreter.c  bc_interpreter.h
src/gc/: gc.c  gc.h
src/heap/: heap.c  heap.h
src/utils/: utils.c  utils.h
